# 3Dengine

./: CMakeLists.txt  README.md  fragmentShader.glsl  glad.c  linearAlg.c  linearAlg.h  main.c  vertexShader.glsl
include/glad/: glad.h
include/linearAlg/: linearAlg.h
shaders/: fragmentShader.fs  vertexShader.vs
src/: CMakeLists.txt  glad.c  linearAlg.c  main.c
